<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/logo_Description"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:layout_marginBottom="@dimen/spacing_xl"
            android:text="@string/app_tagline"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="?android:attr/textColorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTurn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_button_height"
            android:layout_marginBottom="@dimen/spacing_m"
            android:text="@string/nav_turn_calculator"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:cornerRadius="@dimen/card_corner_radius"
            app:icon="@android:drawable/ic_menu_compass"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCrosswind"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_button_height"
            android:layout_marginBottom="@dimen/spacing_m"
            android:text="@string/nav_crosswind_calculator"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:cornerRadius="@dimen/card_corner_radius"
            app:icon="@android:drawable/ic_menu_send"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAirport"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_button_height"
            android:layout_marginBottom="@dimen/spacing_m"
            android:text="@string/nav_airport_information"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:cornerRadius="@dimen/card_corner_radius"
            app:icon="@android:drawable/ic_menu_mylocation"
            app:iconGravity="textStart" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>